--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ SMTP_USERNAME=bhaveshsathwara77@gmail.com
 SMTP_PASSWORD=shmp glbp dbgt atts
 SMTP_FROM_EMAIL=bhaveshsathwara77@gmail.com
 SMTP_FROM_NAME=Grampians Cafe & Bar
-RECIPIENT_EMAIL=tanvimalaviya2004@gmail.com
+RECIPIENT_EMAIL=manger.grampianscafe1@gmail.com
